Fixed dispatching, CSS animations, CSS cropping of images

--- a/resources/public/css/theme.css
+++ b/resources/public/css/theme.css
@@ -31,6 +31,12 @@ a:link, a:visited {
 a:hover {
   background-color:#000000;
 }
+hr {
+    display: block; height: 1px;
+    border: 0; border-top: 5px solid rgba(255, 221, 34, 1);
+    margin-top: 0;
+    padding: 0; 
+}
 .thumbnail {
   opacity: 1.0;
   background-color:rgba(255, 221, 34, 1);
@@ -75,3 +81,13 @@ h6:hover {
 /*   margin-bottom: 50px; */
   margin-top: 0px;
  }
+.ratio{
+    position:relative;
+    width: 100%;
+    height: 0;
+    padding-bottom: 100% ; /* % of width, defines aspect ratio*/
+    
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: cover;  
+}
